--- a/laser101/remark.js/fg.html
+++ b/laser101/remark.js/fg.html
@@ -121,6 +121,35 @@
   </head>
   <body>
     <textarea id="source">
+      name: inverse
+      layout: true
+      class: center, middle, inverse
+      ---
+      #remark
+      [view-source:https://remarkjs.com/#1]
+      .footnote[Go directly to [project site](https://github.com/gnab/remark)]
+      ---
+      ## What is it and why should I be using it?
+      ---
+      layout: false
+      .left-column[
+        ## What is it?
+      ]
+      .right-column[
+        A simple, in-browser, Markdown-driven slideshow tool targeted at people who know their way around HTML and CSS, featuring:
+
+      - Markdown formatting, with smart extensions
+
+      - Presenter mode, with cloned slideshow view
+
+      - Syntax highlighting, supporting a range of languages
+
+      - Slide scaling, thus similar appearance on all devices / resolutions .red[*]
+
+      - Touch support for smart phones and pads, i.e. swipe to navigate slides
+
+      .footnote[.red[*] At least browsers try their best]
+      ]
       
       # OverFlow
 
@@ -439,9 +468,7 @@
     <script src="remark.language.js"></script>
     <script>
       var slideshow = remark.create({
-          highlightStyle: 'monokai',
-          highlightLanguage: 'remark',
-          highlightLines: true
+          sourceUrl: 'laser101.md'
         }) ;
     </script>
     <script>
