switch to reveal.js

--- a/laser101/remark.js/fg-2.html
+++ b/laser101/remark.js/fg-2.html
@@ -18,6 +18,10 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: 400;
         margin-bottom: 0;
+        display: inline; 
+        border-bottom: 3px solid #b3b3b3;
+        padding-bottom: .4em;
+        line-height: 1.75em;
       }
       .remark-slide-content h1 { font-size: 3em; }
       .remark-slide-content h2 { font-size: 2em; }
