update many revealjs files. in the works; unfinished

--- a/laser101/reveal.js/laser101_reveal.html
+++ b/laser101/reveal.js/laser101_reveal.html
@@ -57,7 +57,7 @@
 			progress: true,
 			history: true,
 			center: true,
-			showNotes: true,
+			showNotes: false,
 			slideNumber: false,
 			fragments: true,
 
